--- a/projet-courtax/index.html
+++ b/projet-courtax/index.html
@@ -17,6 +17,19 @@
         <button class="btns" id="4">4</button>
     </section>
     <form name='newsample' onsubmit='maFonction();'><input type=text id=answer></input><input type=submit> </input></form>
+
+ <div class="wrapper">
+        <div class="one" id="div1">Un <button class="btns" id="1">1</button></div>
+        <div class="two "id="div2">Deux</div>
+        <div class="three" id="div3">Trois</div>
+        <div class="four" id="div4">Quatre</div>
+        <div class="five" id="div5">Cinq</div>
+        <div class="six" id="div6">Six</div>
+
+        <form name='newsample' onsubmit='ajoutBoutonDansGrille();'></input><input type=submit> </input></form>
+
+
+    </div>
         <div class="container">
 
 
